--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   </head>
   <body>
 
-    <div class="codex-container">
+    <div class="codex-container container-fluid">
       <div class="row">
-        <div class="col-2 fixed-top" id="sidebar"></div>
+        <div class="col-md-2 col-sm-3 col-3 fixed-top" id="sidebar"></div>
         
-        <div class="col-10 offset-2" id="abno-card-grid"></div>
+        <div class="col-md-10 offset-md-2 col-sm-9 offset-sm-3 col-6 offset-3" id="abno-card-grid"></div>
 
       </div>
     </div>
