--- a/profile.html
+++ b/profile.html
@@ -5,25 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <title>Abnormality Encyclopedia</title>
+    <title class="output-abno-name">{abnoName}</title>
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="https://fonts.cdnfonts.com/css/norwester" rel="stylesheet">                
+    <link href="https://fonts.cdnfonts.com/css/norwester" rel="stylesheet">
+    <link rel="stylesheet" href="css/lightbox.css" />                
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
 
-    <div class="codex-container container-fluid">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-md-2 col-sm-3 col-4 fixed-top sidebar" id="sidebar"></div>
+        <div class="col-md-2 col-sm-3 col-4 fixed-top sidebar" id="profile-sidebar"></div>
         
-        <div class="col-md-10 offset-md-2 col-sm-9 offset-sm-3 col-8 offset-4" id="abno-card-grid"></div>
+        <div class="col-md-10 offset-md-2 col-sm-9 offset-sm-3 col-8 offset-4 output-abno-name" id="abno-info">
+            <div id="abno-info-page">
+              <div id="title-header">{abnoName}</div>
+              
+            </div>
+        </div>
 
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="infopage_script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
+    <script src="lightbox.js"></script>
   </body>
 </html>
