RR3 Abno Images

--- a/abnoinfo/Brazen Bull.html
+++ b/abnoinfo/Brazen Bull.html
@@ -11,8 +11,10 @@
         <a class="img-link" href="../images/abnos/Brazen Bull/LCB Broken.png" data-lightbox="LCB" data-title="All Parts Broken"><img class="gallery-img" src="../images/abnos/Brazen Bull/LCB Broken.png"/></a>
         <a class="img-link" href="../images/abnos/Brazen Bull/LCB Core.png" data-lightbox="LCB" data-title="Core"><img class="gallery-img" src="../images/abnos/Brazen Bull/LCB Core.png"/></a>
         <a class="img-link" href="../images/abnos/Brazen Bull/LCB MD.png" data-lightbox="LCB" data-title="Mirror Dungeon Event"><img class="gallery-img" src="../images/abnos/Brazen Bull/LCB MD.png"/></a>
+        <a class="img-link" href="../images/abnos/Brazen Bull/LCB SD.png" data-lightbox="LCB" data-title="Story Dungeon Event"><img class="gallery-img" src="../images/abnos/Brazen Bull/LCB SD.png"/></a>
         <a class="img-link" href="../images/abnos/Brazen Bull/LCB EGO 1.png" data-lightbox="LCB" data-title="E.G.O"><img class="gallery-img" src="../images/abnos/Brazen Bull/LCB EGO 1.png"/></a>
         <a class="img-link" href="../images/abnos/Brazen Bull/LCB EGO 2.png" data-lightbox="LCB" data-title="E.G.O"><img class="gallery-img" src="../images/abnos/Brazen Bull/LCB EGO 2.png"/></a>
+        <a class="img-link" href="../images/abnos/Brazen Bull/LCB Story.png" data-lightbox="LCB" data-title="Brazen Bull rampaging in K Corp's Nest"><img class="gallery-img" src="../images/abnos/Brazen Bull/LCB Story.png"/></a>
         <a class="img-link" href="../images/abnos/Brazen Bull/LCB BG.png" data-lightbox="LCB" data-title="Battle Background"><img class="gallery-img" src="../images/abnos/Brazen Bull/LCB BG.png"/></a>
       </div>
     </section>
