Canto V Abno Images

--- a/abnoinfo/Brazen Bull.html
+++ b/abnoinfo/Brazen Bull.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <body>
-    <div class="abno-quote"><q>It suffered for such a long time… Unable to do anything about the raging thirst, the flesh endlessly burning and searing…</q></div>
+    <div class="abno-quote"><q>It suffered for a long time. Unable to do anything about the raging thirst, the flesh endlessly burning and searing…</q></div>
 
     <section>
       <h3 class="profile-header">Gallery</h3>
