Renaming image class

--- a/abnoinfo/Ardor Blossom Moth.html
+++ b/abnoinfo/Ardor Blossom Moth.html
@@ -7,12 +7,12 @@
       <h3 class="profile-header">Gallery</h3>
       <hr>
       <div class="abno-gallery">
-        <a class="img-link" href="../images/abnos/Ardor Blossom Moth/LCB Idle.png" data-lightbox="LCB" data-title="Idle Sprite"><img class="gallery-img" src="../images/abnos/Ardor Blossom Moth/LCB Idle.png"/></a>
-        <a class="img-link" href="../images/abnos/Ardor Blossom Moth/LCB Broken.png" data-lightbox="LCB" data-title="All Parts Broken"><img class="gallery-img" src="../images/abnos/Ardor Blossom Moth/LCB Broken.png"/></a>
-        <a class="img-link" href="../images/abnos/Ardor Blossom Moth/LCB Core.png" data-lightbox="LCB" data-title="Core"><img class="gallery-img" src="../images/abnos/Ardor Blossom Moth/LCB Core.png"/></a>
-        <a class="img-link" href="../images/abnos/Ardor Blossom Moth/LCB MD.png" data-lightbox="LCB" data-title="Mirror Dungeon Event"><img class="gallery-img" src="../images/abnos/Ardor Blossom Moth/LCB MD.png"/></a>
-        <a class="img-link" href="../images/abnos/Ardor Blossom Moth/LCB EGO 1.png" data-lightbox="LCB" data-title="E.G.O"><img class="gallery-img" src="../images/abnos/Ardor Blossom Moth/LCB EGO 1.png"/></a>
-        <a class="img-link" href="../images/abnos/Ardor Blossom Moth/LCB BG.png" data-lightbox="LCB" data-title="Battle Background"><img class="gallery-img" src="../images/abnos/Ardor Blossom Moth/LCB BG.png"/></a>
+        <a class="display-img" href="../images/abnos/Ardor Blossom Moth/LCB Idle.png" data-lightbox="LCB" data-title="Idle Sprite"><img class="gallery-img" src="../images/abnos/Ardor Blossom Moth/LCB Idle.png"/></a>
+        <a class="display-img" href="../images/abnos/Ardor Blossom Moth/LCB Broken.png" data-lightbox="LCB" data-title="All Parts Broken"><img class="gallery-img" src="../images/abnos/Ardor Blossom Moth/LCB Broken.png"/></a>
+        <a class="display-img" href="../images/abnos/Ardor Blossom Moth/LCB Core.png" data-lightbox="LCB" data-title="Core"><img class="gallery-img" src="../images/abnos/Ardor Blossom Moth/LCB Core.png"/></a>
+        <a class="display-img" href="../images/abnos/Ardor Blossom Moth/LCB MD.png" data-lightbox="LCB" data-title="Mirror Dungeon Event"><img class="gallery-img" src="../images/abnos/Ardor Blossom Moth/LCB MD.png"/></a>
+        <a class="display-img" href="../images/abnos/Ardor Blossom Moth/LCB EGO 1.png" data-lightbox="LCB" data-title="E.G.O"><img class="gallery-img" src="../images/abnos/Ardor Blossom Moth/LCB EGO 1.png"/></a>
+        <a class="display-img" href="../images/abnos/Ardor Blossom Moth/LCB BG.png" data-lightbox="LCB" data-title="Battle Background"><img class="gallery-img" src="../images/abnos/Ardor Blossom Moth/LCB BG.png"/></a>
       </div>
     </section>
 
