--- a/abnoinfo/So That No One Will Cry.html
+++ b/abnoinfo/So That No One Will Cry.html
@@ -7,11 +7,11 @@
       <h3 class="profile-header">Gallery</h3>
       <hr>
       <div class="abno-gallery">
-        <a class="img-link" href="../images/abnos/So That No One Will Cry/LCB Idle.png" data-lightbox="LCB" data-title="Idle Sprite"><img class="gallery-img" src="../images/abnos/So That No One Will Cry/LCB Idle.png"/></a>
-        <a class="img-link" href="../images/abnos/So That No One Will Cry/LCB Broken.png" data-lightbox="LCB" data-title="All Parts Broken"><img class="gallery-img" src="../images/abnos/So That No One Will Cry/LCB Broken.png"/></a>
-        <a class="img-link" href="../images/abnos/So That No One Will Cry/LCB Core.png" data-lightbox="LCB" data-title="Core"><img class="gallery-img" src="../images/abnos/So That No One Will Cry/LCB Core.png"/></a>
-        <a class="img-link" href="../images/abnos/So That No One Will Cry/LCB MD.png" data-lightbox="LCB" data-title="Mirror Dungeon Event"><img class="gallery-img" src="../images/abnos/So That No One Will Cry/LCB MD.png"/></a>
-        <a class="img-link" href="../images/abnos/So That No One Will Cry/LCB BG.png" data-lightbox="LCB" data-title="Battle Background"><img class="gallery-img" src="../images/abnos/So That No One Will Cry/LCB BG.png"/></a>
+        <a class="display-img" href="../images/abnos/So That No One Will Cry/LCB Idle.png" data-lightbox="LCB" data-title="Idle Sprite"><img class="gallery-img" src="../images/abnos/So That No One Will Cry/LCB Idle.png"/></a>
+        <a class="display-img" href="../images/abnos/So That No One Will Cry/LCB Broken.png" data-lightbox="LCB" data-title="All Parts Broken"><img class="gallery-img" src="../images/abnos/So That No One Will Cry/LCB Broken.png"/></a>
+        <a class="display-img" href="../images/abnos/So That No One Will Cry/LCB Core.png" data-lightbox="LCB" data-title="Core"><img class="gallery-img" src="../images/abnos/So That No One Will Cry/LCB Core.png"/></a>
+        <a class="display-img" href="../images/abnos/So That No One Will Cry/LCB MD.png" data-lightbox="LCB" data-title="Mirror Dungeon Event"><img class="gallery-img" src="../images/abnos/So That No One Will Cry/LCB MD.png"/></a>
+        <a class="display-img" href="../images/abnos/So That No One Will Cry/LCB BG.png" data-lightbox="LCB" data-title="Battle Background"><img class="gallery-img" src="../images/abnos/So That No One Will Cry/LCB BG.png"/></a>
       </div>
     </section>
 
