--- a/abnoinfo/Drenched Gossypium.html
+++ b/abnoinfo/Drenched Gossypium.html
@@ -7,13 +7,13 @@
       <h3 class="profile-header">Gallery</h3>
       <hr>
       <div class="abno-gallery">
-        <a class="img-link" href="../images/abnos/Drenched Gossypium/LCB Idle.png" data-lightbox="LCB" data-title="Idle Sprite"><img class="gallery-img" src="../images/abnos/Drenched Gossypium/LCB Idle.png"/></a>
-        <a class="img-link" href="../images/abnos/Drenched Gossypium/LCB Broken.png" data-lightbox="LCB" data-title="All Parts Broken"><img class="gallery-img" src="../images/abnos/Drenched Gossypium/LCB Broken.png"/></a>
-        <a class="img-link" href="../images/abnos/Drenched Gossypium/LCB Idle Red-stained.png" data-lightbox="LCB" data-title="Idle Sprite (Red-stained)"><img class="gallery-img" src="../images/abnos/Drenched Gossypium/LCB Idle Red-stained.png"/></a>
-        <a class="img-link" href="../images/abnos/Drenched Gossypium/LCB Broken Red-stained.png" data-lightbox="LCB" data-title="All Parts Broken (Red-stained)"><img class="gallery-img" src="../images/abnos/Drenched Gossypium/LCB Broken Red-stained.png"/></a>
-        <a class="img-link" href="../images/abnos/Drenched Gossypium/LCB Core.png" data-lightbox="LCB" data-title="Core"><img class="gallery-img" src="../images/abnos/Drenched Gossypium/LCB Core.png"/></a>
-        <a class="img-link" href="../images/abnos/Drenched Gossypium/LCB MD.png" data-lightbox="LCB" data-title="Mirror Dungeon Event"><img class="gallery-img" src="../images/abnos/Drenched Gossypium/LCB MD.png"/></a>
-        <a class="img-link" href="../images/abnos/Drenched Gossypium/LCB BG.png" data-lightbox="LCB" data-title="Battle Background"><img class="gallery-img" src="../images/abnos/Drenched Gossypium/LCB BG.png"/></a>
+        <a class="display-img" href="../images/abnos/Drenched Gossypium/LCB Idle.png" data-lightbox="LCB" data-title="Idle Sprite"><img class="gallery-img" src="../images/abnos/Drenched Gossypium/LCB Idle.png"/></a>
+        <a class="display-img" href="../images/abnos/Drenched Gossypium/LCB Broken.png" data-lightbox="LCB" data-title="All Parts Broken"><img class="gallery-img" src="../images/abnos/Drenched Gossypium/LCB Broken.png"/></a>
+        <a class="display-img" href="../images/abnos/Drenched Gossypium/LCB Idle Red-stained.png" data-lightbox="LCB" data-title="Idle Sprite (Red-stained)"><img class="gallery-img" src="../images/abnos/Drenched Gossypium/LCB Idle Red-stained.png"/></a>
+        <a class="display-img" href="../images/abnos/Drenched Gossypium/LCB Broken Red-stained.png" data-lightbox="LCB" data-title="All Parts Broken (Red-stained)"><img class="gallery-img" src="../images/abnos/Drenched Gossypium/LCB Broken Red-stained.png"/></a>
+        <a class="display-img" href="../images/abnos/Drenched Gossypium/LCB Core.png" data-lightbox="LCB" data-title="Core"><img class="gallery-img" src="../images/abnos/Drenched Gossypium/LCB Core.png"/></a>
+        <a class="display-img" href="../images/abnos/Drenched Gossypium/LCB MD.png" data-lightbox="LCB" data-title="Mirror Dungeon Event"><img class="gallery-img" src="../images/abnos/Drenched Gossypium/LCB MD.png"/></a>
+        <a class="display-img" href="../images/abnos/Drenched Gossypium/LCB BG.png" data-lightbox="LCB" data-title="Battle Background"><img class="gallery-img" src="../images/abnos/Drenched Gossypium/LCB BG.png"/></a>
       </div>
     </section>
 
