--- a/abnoinfo/Shock Centipede.html
+++ b/abnoinfo/Shock Centipede.html
@@ -7,13 +7,13 @@
       <h3 class="profile-header">Gallery</h3>
       <hr>
       <div class="abno-gallery">
-        <a class="img-link" href="../images/abnos/Shock Centipede/LCB Idle.png" data-lightbox="LCB" data-title="Idle Sprite"><img class="gallery-img" src="../images/abnos/Shock Centipede/LCB Idle.png"/></a>
-        <a class="img-link" href="../images/abnos/Shock Centipede/LCB Broken.png" data-lightbox="LCB" data-title="All Parts Broken"><img class="gallery-img" src="../images/abnos/Shock Centipede/LCB Broken.png"/></a>
-        <a class="img-link" href="../images/abnos/Shock Centipede/LCB Core.png" data-lightbox="LCB" data-title="Core"><img class="gallery-img" src="../images/abnos/Shock Centipede/LCB Core.png"/></a>
-        <a class="img-link" href="../images/abnos/Shock Centipede/LCB MD.png" data-lightbox="LCB" data-title="Mirror Dungeon Event"><img class="gallery-img" src="../images/abnos/Shock Centipede/LCB MD.png"/></a>
-        <a class="img-link" href="../images/abnos/Shock Centipede/LCB EGO 1.png" data-lightbox="LCB" data-title="E.G.O"><img class="gallery-img" src="../images/abnos/Shock Centipede/LCB EGO 1.png"/></a>
-        <a class="img-link" href="../images/abnos/Shock Centipede/LCB EGO 2.png" data-lightbox="LCB" data-title="E.G.O"><img class="gallery-img" src="../images/abnos/Shock Centipede/LCB EGO 2.png"/></a>
-        <a class="img-link" href="../images/abnos/Shock Centipede/LCB BG.png" data-lightbox="LCB" data-title="Battle Background"><img class="gallery-img" src="../images/abnos/Shock Centipede/LCB BG.png"/></a>
+        <a class="display-img" href="../images/abnos/Shock Centipede/LCB Idle.png" data-lightbox="LCB" data-title="Idle Sprite"><img class="gallery-img" src="../images/abnos/Shock Centipede/LCB Idle.png"/></a>
+        <a class="display-img" href="../images/abnos/Shock Centipede/LCB Broken.png" data-lightbox="LCB" data-title="All Parts Broken"><img class="gallery-img" src="../images/abnos/Shock Centipede/LCB Broken.png"/></a>
+        <a class="display-img" href="../images/abnos/Shock Centipede/LCB Core.png" data-lightbox="LCB" data-title="Core"><img class="gallery-img" src="../images/abnos/Shock Centipede/LCB Core.png"/></a>
+        <a class="display-img" href="../images/abnos/Shock Centipede/LCB MD.png" data-lightbox="LCB" data-title="Mirror Dungeon Event"><img class="gallery-img" src="../images/abnos/Shock Centipede/LCB MD.png"/></a>
+        <a class="display-img" href="../images/abnos/Shock Centipede/LCB EGO 1.png" data-lightbox="LCB" data-title="E.G.O"><img class="gallery-img" src="../images/abnos/Shock Centipede/LCB EGO 1.png"/></a>
+        <a class="display-img" href="../images/abnos/Shock Centipede/LCB EGO 2.png" data-lightbox="LCB" data-title="E.G.O"><img class="gallery-img" src="../images/abnos/Shock Centipede/LCB EGO 2.png"/></a>
+        <a class="display-img" href="../images/abnos/Shock Centipede/LCB BG.png" data-lightbox="LCB" data-title="Battle Background"><img class="gallery-img" src="../images/abnos/Shock Centipede/LCB BG.png"/></a>
       </div>
     </section>
 
