--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Abnormality Encyclopedia</title>
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="https://fonts.cdnfonts.com/css/norwester" rel="stylesheet">                
+    <link href="https://fonts.cdnfonts.com/css/norwester" rel="stylesheet">  
+    <link rel="stylesheet" href="css/colours.css" />              
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
