--- a/abnoinfo/Blue Star.html
+++ b/abnoinfo/Blue Star.html
@@ -18,7 +18,7 @@
         <div class="caption">{abnoName} in<br>Lobotomy Corporation</div>
       </div>
       
-      <p>In containment, {abnoName} deals 6-9 {WHITE} damage and produces a maximum of 33 {E-Boxes}.<br>Its responses to the four work orders is as follows:<br>{Insight} (Common) > {Repression} (Common) > {Instinct} (Low) > {Attachment} (Very Low).</p><p>Its Qliphoth Counter starts at 2.<br>Upon reaching 0, {abnoName} breaches containment, teleporting into the main room of a random department. After teleporting, it remains stationary floating in the air. It occasionally lets out bursts of {WHITE} damage that affect every employee in the facility. Any employee that falls into a panic from its attacks becomes a worshipper and immediately gets sucked into its centre, dying.</p>
+      <p>In containment, {abnoName} deals 6-9 {WHITE} damage and produces a maximum of 33 {E-Boxes}.<br>Its responses to the four work orders are as follows:<br>{Insight} (Common) > {Repression} (Common) > {Instinct} (Low) > {Attachment} (Very Low).</p><p>Its Qliphoth Counter starts at 2.<br>Upon reaching 0, {abnoName} breaches containment, teleporting into the main room of a random department. After teleporting, it remains stationary floating in the air. It occasionally lets out bursts of {WHITE} damage that affect every employee in the facility. Any employee that falls into a panic from its attacks becomes a worshipper and immediately gets sucked into its centre, dying.</p>
 
       <h5 class="profile-subheader">Managerial Guidelines</h5>
       <ul>
