--- a/abnoinfo/Scorched Girl.html
+++ b/abnoinfo/Scorched Girl.html
@@ -26,7 +26,7 @@
         <a class="next" onclick="nextSlide(1,0)">&#10095;</a>
       </div>
       
-      <p>In containment, {abnoName} deals 2-4 {RED} damage and produces a maximum of 12 {E-Boxes}.<br>Its responses to the four work orders is as follows:<br>{Insight} (High) > {Repression} (Common) > {Instinct} (Common) > {Attachment} (Very Low).<br>It perfers work performed by lower level agents.</p><p>Its Qliphoth Counter starts at 2.<br>Upon reaching 0, {abnoName} breaches containment. It will randomly select an employee, prioritising those within the same department its is kept in. 5 seconds after reaching the same room as the marked employee, it will explode dealing a large amount of {RED} damage to everything in the room, suppressing itself.</p>
+      <p>In containment, {abnoName} deals 2-4 {RED} damage and produces a maximum of 12 {E-Boxes}.<br>Its responses to the four work orders are as follows:<br>{Insight} (High) > {Repression} (Common) > {Instinct} (Common) > {Attachment} (Very Low).<br>It perfers work performed by lower level agents.</p><p>Its Qliphoth Counter starts at 2.<br>Upon reaching 0, {abnoName} breaches containment. It will randomly select an employee, prioritising those within the same department its is kept in. 5 seconds after reaching the same room as the marked employee, it will explode dealing a large amount of {RED} damage to everything in the room, suppressing itself.</p>
 
       <h5 class="profile-subheader">Managerial Guidelines</h5>
       <ul>
