Forsaken Murderer's page

--- a/abnoinfo/Blue Star.html
+++ b/abnoinfo/Blue Star.html
@@ -5,7 +5,9 @@
 
     <section class="abno-intro">
       <p><b>{abnoName}</b> is an extremely large entity bearing a blue, heart-shaped star as a core. It possesses innumerous grey legs which sprout out haphazardly from its centre. The Abnormality is usually seen levitating, and is capable of teleportation.</p>
+
       <p>{abnoName}'s 'heart' emits a glowing blue light, while its centre is a pitch black void. This hole acts as a vacuum, sucking in targets and killing them.</p>
+
       <p>The Abnormality often invokes feelings of devotion and idolization in its targets, causing them to worship it. Worshippers of the {abnoName} express a desire to willingly throw themselves into the Abnormality's centre, claiming they must "return to that place" to cleanse themselves of their sins. {abnoName} is also capable of producing a low-pitched hum which encourages targets to respond to the 'call' and act as 'martyrs', being sucked into the Abnormality to be reborn as stars.</p>
     </section>
     <br>
@@ -18,7 +20,9 @@
         <div class="caption">{abnoName} in<br>Lobotomy Corporation</div>
       </div>
       
-      <p>In containment, {abnoName} deals 6-9 {WHITE} damage and produces a maximum of 33 {E-Boxes}.<br>Its responses to the four work orders are as follows:<br>{Insight} (Common) > {Repression} (Common) > {Instinct} (Low) > {Attachment} (Very Low).</p><p>Its Qliphoth Counter starts at 2.<br>Upon reaching 0, {abnoName} breaches containment, teleporting into the main room of a random department. After teleporting, it remains stationary floating in the air. It occasionally lets out bursts of {WHITE} damage that affect every employee in the facility. Any employee that falls into a panic from its attacks becomes a worshipper and immediately gets sucked into its centre, dying.</p>
+      <p>In containment, {abnoName} deals 6-9 {WHITE} damage and produces a maximum of 33 {E-Boxes}.<br>Its responses to the four work orders are as follows:<br>{Insight} (Common) > {Repression} (Common) > {Instinct} (Low) > {Attachment} (Very Low).</p>
+      
+      <p>Its Qliphoth Counter starts at 2.<br>Upon reaching 0, {abnoName} breaches containment, teleporting into the main room of a random department. After teleporting, it remains stationary floating in the air. It occasionally lets out bursts of {WHITE} damage that affect every employee in the facility. Any employee that falls into a panic from its attacks becomes a worshipper and immediately gets sucked into its centre, dying.</p>
 
       <h5 class="profile-subheader">Managerial Guidelines</h5>
       <ul>
@@ -254,6 +258,9 @@
                 </div>
                 <div class="slide notfirst slides2">
                   <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Move.png" data-lightbox="LoR2" data-title="Moving"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Move.png"/></a>
+                </div>
+                <div class="slide notfirst slides2">
+                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Guard.png" data-lightbox="LoR2" data-title="Guarding"><img class="page-img  enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Guard.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
                   <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Hurt.png" data-lightbox="LoR2" data-title="Hurt"><img class="page-img  enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Hurt.png"/></a>
